stateDiagram-v2
    [*] --> DRAFT
    DRAFT --> VALIDATING
    VALIDATING --> QUEUED
    VALIDATING --> FAILED
    QUEUED --> PREPARING
    QUEUED --> CANCELLED
    PREPARING --> RUNNING
    PREPARING --> FAILED
    RUNNING --> AGGREGATING
    RUNNING --> PARTIAL
    RUNNING --> FAILED
    RUNNING --> CANCELLED
    AGGREGATING --> COMPARING
    COMPARING --> REPORTING
    REPORTING --> COMPLETED
    REPORTING --> PARTIAL
    COMPLETED --> [*]
    PARTIAL --> [*]
    FAILED --> [*]
    CANCELLED --> [*]
